data/derived/comb/progs/unify/prog8094.ml.out
Characters 107-110:
  |Cosine(e) -> cos*(pi*. eval (e,x,y))
                ^^^
Error: This expression has type float -> float
       but an expression was expected of type int
